[package]
name = "tsuka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.2"
glob = "0.3"
indexmap = "1.9"
itertools = "0.10"
maud = "0.23"
pulldown-cmark = "0.9"
swc = "0.212.3"
swc_common = { version = "0.26.0", features = ["tty-emitter"] }
swc_ecma_ast = { version = "0.89.1" }
swc_ecma_parser = { version = "0.116.0", features = ["typescript"] }
swc_ecma_visit = "0.75.0"
